<resources>
    <string name="app_name">Game Catalog</string>
    <string name="search_game">Search Game …</string>
    <string name="categories">Categories</string>
    <string name="description">Description</string>
    <string name="additional_information">Additional Information</string>
    <string name="genre">Genre</string>
    <string name="platform">Platform</string>
    <string name="publisher">Publisher</string>
    <string name="developer">Developer</string>
    <string name="system_requirements">System requirements</string>
    <string name="os">Os</string>
    <string name="processor">Processor</string>
    <string name="memory">Memory</string>
    <string name="graphics">Graphics</string>
    <string name="storage">Storage</string>
    <string name="not_found">Not found</string>
    <string name="all">All</string>
    <string name="download">Download</string>
    <string name="play">Play</string>
    <string name="network_error">Network error</string>
    <string name="there_are_no_favorite_games">There are no favorite games</string>
</resources>