<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_main_scene2"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/search_game"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_margin="10dp"
        android:background="@drawable/bg_input_search"
        android:drawableStart="@drawable/ic_search"
        android:drawablePadding="10dp"
        android:hint="@string/search_game"
        android:imeOptions="actionSearch"
        android:paddingStart="10dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/granite_gray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/categories_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_game">


        <TextView
            android:id="@+id/categories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/categories"
            android:textColor="@color/chinese_silver"
            android:textSize="@dimen/_21ssp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_categories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/categories" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/selected_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/all"
        android:textColor="@color/chinese_silver"
        android:textSize="@dimen/_21sdp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/categories_layout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_all_games"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selected_category"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ProgressBar
        android:id="@+id/progressRecyclerGames"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/recycler_all_games"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/recycler_all_games" />

    <ImageView
        android:id="@+id/img_network_error"
        android:layout_width="@dimen/_90sdp"
        android:layout_height="@dimen/_90sdp"
        android:src="@drawable/ic_error_network"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/recycler_all_games"
        app:layout_constraintRight_toRightOf="@id/recycler_all_games"
        app:layout_constraintTop_toTopOf="@id/recycler_all_games" />

    <TextView
        android:id="@+id/msg_network_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/network_error"
        android:textStyle="bold"
        android:textColor="@color/chinese_silver"
        android:textSize="@dimen/_18ssp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/img_network_error"
        app:layout_constraintLeft_toLeftOf="@id/img_network_error"
        app:layout_constraintRight_toRightOf="@id/img_network_error"/>

    <ImageView
        android:id="@+id/img_favorite_games"
        android:layout_width="@dimen/_90sdp"
        android:layout_height="@dimen/_90sdp"
        android:src="@drawable/ic_favorite_games"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/recycler_all_games"
        app:layout_constraintRight_toRightOf="@id/recycler_all_games"
        app:layout_constraintTop_toTopOf="@id/recycler_all_games" />

    <TextView
        android:id="@+id/msg_favorite_games"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/there_are_no_favorite_games"
        android:textStyle="bold"
        android:textColor="@color/chinese_silver"
        android:textSize="@dimen/_18ssp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/img_favorite_games"
        app:layout_constraintLeft_toLeftOf="@id/img_favorite_games"
        app:layout_constraintRight_toRightOf="@id/img_favorite_games"/>

</androidx.constraintlayout.widget.ConstraintLayout>