<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameInformation">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/back_activity"
                android:layout_width="@dimen/_22sdp"
                android:layout_height="@dimen/_22sdp"
                android:src="@drawable/ic_arrow_back"
                android:layout_margin="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/name_game_information"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/_20ssp"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="@id/back_activity"
                app:layout_constraintRight_toRightOf="parent"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/image_game_layout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200sdp"
                android:layout_margin="10dp"
                android:backgroundTint="@color/chinese_black"
                app:cardCornerRadius="15sp"
                app:cardElevation="10sp"
                app:layout_constraintTop_toBottomOf="@id/name_game_information"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <ImageView
                    android:id="@+id/image_game_information"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"/>

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/action_game"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_55sdp"
                android:textSize="@dimen/_13ssp"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                style="?attr/materialButtonOutlinedStyle"
                app:strokeColor="@color/philippine_yellow"
                app:cornerRadius="15dp"
                app:layout_constraintTop_toBottomOf="@id/image_game_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="@dimen/_20ssp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_margin="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/action_game" />

            <TextView
                android:id="@+id/description_game"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/chinese_silver"
                android:textSize="@dimen/_12ssp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintTop_toBottomOf="@id/description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/screenshots_game"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/description_game"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/additional_information"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/additional_information"
                android:textColor="@color/white"
                android:textSize="@dimen/_20ssp"
                android:textStyle="bold"
                android:layout_margin="10dp"
                app:layout_constraintTop_toBottomOf="@id/screenshots_game"
                app:layout_constraintStart_toStartOf="parent" />

            <LinearLayout
                android:id="@+id/first_row_additional_information"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp"
                app:layout_constraintTop_toBottomOf="@id/additional_information"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/genre"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_15ssp"/>

                    <TextView
                        android:id="@+id/genre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/chinese_silver"
                        android:textSize="@dimen/_12ssp"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/platform"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_15ssp"/>

                    <TextView
                        android:id="@+id/platform"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/chinese_silver"
                        android:textSize="@dimen/_12ssp"/>

                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/two_row_additional_information"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp"
                app:layout_constraintTop_toBottomOf="@id/first_row_additional_information"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/publisher"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_15ssp"/>

                    <TextView
                        android:id="@+id/publisher"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/chinese_silver"
                        android:textSize="@dimen/_12ssp"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="15dp"
                    android:layout_marginStart="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/developer"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_15ssp"/>

                    <TextView
                        android:id="@+id/developer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/chinese_silver"
                        android:textSize="@dimen/_12ssp"/>

                </LinearLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <FrameLayout
        android:id="@+id/modal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/eerie_black"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/closed_modal"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/ic_close"
                android:layout_alignParentEnd="true"
                android:layout_margin="10dp"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/eerie_black"
                android:layout_centerInParent="true"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="@dimen/_80sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                app:cardCornerRadius="15dp">

                <ImageView
                    android:id="@+id/image_screenshot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxHeight="300dp"
                    android:scaleType="centerCrop"/>

            </androidx.cardview.widget.CardView>


        </RelativeLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>